# rsshub-rs

./: Cargo.toml  Dockerfile  docker-compose.yaml  fly.toml
.github/workflow/: docker.yml
.github/workflows/: docker.yml
src/: main.rs
src/docs/: macros.rs  mod.rs  routes.rs
src/feeds/: mod.rs
src/routes/: github.rs  hackernews.rs  mod.rs  reddit.rs  scraper.rs  v2ex.rs  xuangubao.rs
src/utils/: http.rs  mod.rs  response.rs
static/: index.html
templates/: index.html
