[package]
name = "rsshub-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsshub-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.19"
rss = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
html-escape = "0.2"
url = "2"
regex = "1"
once_cell = "1"
futures = "0.3"
